--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,10 @@
 @import './projects/carrousel2.scss';
 @import './skills/skills.scss';
 @import './skills/languages.scss';
+@import './contact/contact.scss';
+@import './contact/formulario.scss';
+@import './footer/footer.scss';
+@import './configs/cores.scss';
 
 @font-face {
     font-family:'kaleok' ;
