--- a/src/styles/home/pageBody.scss
+++ b/src/styles/home/pageBody.scss
@@ -1,3 +1,5 @@
+@import '../configs/cores.scss';
+
 .hello {
     display: flex;
     justify-content: center;
@@ -9,9 +11,9 @@
     font-size: 20px;
 
     &:hover {
-        background-color: orange;
+        background-color: $main-orange;
         cursor: pointer;
-        color: white;
+        color: $main-white;
         transition: 0.5s;
     }
 
