--- a/src/styles/skills/skills.scss
+++ b/src/styles/skills/skills.scss
@@ -1,10 +1,12 @@
+@import '../configs/cores.scss';
+
 .my-skills {
-    background-color: orange;
+    background-color: $white-100;
     padding: 64px;
-    border-radius: 15px;
-    position: relative;
-    width: 100vw;
+    border-radius: 20px;
+    width: 80%;
     margin: 0 auto;
+    box-shadow: 0px 0px 5px $boxshadow-100;
 
     &__h2 {
         display: flex;
@@ -15,31 +17,75 @@
         display: flex;
         justify-content: space-around;
         margin-top: 64px;
+        margin-bottom: 32px;
 
         &__left-block {
             height: 400px;
             width: 350px;
-            box-shadow: 0px 0px 5px black;
-            background-color: white;
+            box-shadow: 0px 0px 5px $main-black;
+            background-color: $main-white;
             border-radius: 15px;
             margin-right: 12px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            &:hover {
+                padding: 3px;
+                transition: 0.5s;
+            }
+
+            &:not(:hover) {
+                transition: 0.5s;
+            }
 
             &__p {
                 margin: 16px;
+                font-size: 1.2em;
             }
         }
 
         &__right-block {
             height: 400px;
             width: 350px;
-            box-shadow: 0px 0px 5px black;
-            background-color: white;
+            box-shadow: 0px 0px 5px $main-black;
+            background-color: $main-white;
             border-radius: 15px;
             margin-left: 12px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            
+
+            &:hover {
+                padding: 3px;
+                transition: 0.5s;
+            }
+
+            &:not(:hover) {
+                transition: 0.5s;
+            }
 
             &__p {
                 margin: 16px;
+                font-size: 1.2em;
             }
         }
     }
+}
+
+.bi-code-slash::before {
+    font-size: 5em;
+    color: $main-orange;
+    margin: 6px;
+}
+
+.bi-magic::before {
+    font-size: 5em;
+    color: $main-orange;
+    margin: 6px;
+}
+
+#skills {
+    margin-bottom: 64px;
 }
