--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@
 @import './contact/contact.scss';
 @import './contact/formulario.scss';
 @import './footer/footer.scss';
+@import './responsividade/responsive.scss';
 @import './configs/cores.scss';
 
 @font-face {
