--- a/src/styles/skills/languages.scss
+++ b/src/styles/skills/languages.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: auto;
+    margin: 0 auto;
     font-size: 5em;
     height: 88px;
     width: 88px;
